--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,3 +1,10 @@
+
+<div id="canvas-container" style="position:relative;">
+
+</div>
+
+
+<!--
 <h1>
   {{ title }}
 </h1>
@@ -9,3 +16,4 @@
 <div>
   <h2 class="text-error">Home: {{ message }}</h2>
 </div>
+-->
